cluster/apps/default/heimdall/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    hajimari.io/enable: "true"
    hajimari.io/icon: "dashboard"
spec:
  rules:
    - host: heimdall.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: heimdall
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - heimdall.${SECRET_DOMAIN}
